Renamed Time Zone id variable

--- a/Source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/_IntegrationDetailsPartial.cshtml
+++ b/Source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/_IntegrationDetailsPartial.cshtml
@@ -174,7 +174,7 @@
 				Time Zone:
 			</div>
 			<div class="field-value">
-				<select id="timeZones" data-bind="options: timeZones, optionsText: 'DisplayName', optionsValue: 'Id', value: selectedTimeZone, optionsCaption: 'Select...', select2: {}"></select>
+				<select id="timeZones" data-bind="options: timeZones, optionsText: 'DisplayName', optionsValue: 'Id', value: timeZoneId, optionsCaption: 'Select...', select2: {}"></select>
 			</div>
 		</div>
 	</div>
