REL-114160 update apply profile UI

--- a/Source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/_IntegrationDetailsPartial.cshtml
+++ b/Source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/_IntegrationDetailsPartial.cshtml
@@ -93,7 +93,7 @@
 <script type="text/html" id="profileConfig">
 	<div class="field-row">
 		<div class="field-label">
-			Apply Profile:
+			Profile:
 		</div>
 		<div class="field-value">
 			<select id="apply-profile-selector" data-bind="options: filterProfiles, optionsText: 'displayName', optionsValue: 'value', value: selectedProfile, optionsCaption: 'Select...', select2: {}"></select>
