--- a/source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/SaveAsProfileModal.cshtml
+++ b/source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/SaveAsProfileModal.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="popupTitle">Save as a Profile</div>
+﻿<div class="popupTitle">Save as Profile</div>
 <div class="card">
 	<div class="field-row">
 		<div class="field-label required">Profile Name:</div>
@@ -8,7 +8,7 @@
 	</div>
 </div>
 <div class="popupArtifactActionBar">
-	<button id="save-as-profile-confirm-button" class="ActionButton" data-bind="click: ok">Save as a Profile</button>
+	<button id="save-as-profile-confirm-button" class="ActionButton" data-bind="click: ok">Save as Profile</button>
 	<button id="save-as-profile-cancel-button" class="ActionButton" data-bind="click: cancel">Cancel</button>
 </div>
 <link rel="stylesheet" type="text/css" href="~/Content/list-picker.css">
