REL-115754 RIP - Profile solution - bugs REL-115761 Change top menu

--- a/Source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/Edit.cshtml
+++ b/Source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/Edit.cshtml
@@ -8,7 +8,7 @@
 			<span class="legal-hold icon-help"> </span>
 		</div>
 	</div>
-	<h1>Create Integration Point</h1>
+	<h1>Create @Model.ArtifactTypeName</h1>
 }
 
 @*TODO: This is needed to style the Preview buttons that we place on the partial view with the RIP steps*@
