Changes for UI and fix with Edit operation (incorrect Destination Folder Path was sent to controller on Edit)

--- a/Source/kCura.IntegrationPoints.Web/Views/Fileshare/LoadFileProviderSummaryPage.cshtml
+++ b/Source/kCura.IntegrationPoints.Web/Views/Fileshare/LoadFileProviderSummaryPage.cshtml
@@ -64,7 +64,7 @@
 			<table>
 				<tr>
 					<td class="dynamicViewFieldName">Destination details:</td>
-					<td class="dynamicViewFieldValue breakWord">FileShare: <!--ko text: settings.Fileshare--><!--/ko--></td>
+					<td class="dynamicViewFieldValue" data-bind="text: fileShareLocation"></td>
 				</tr>
 			</table>
 		</td>
