Fix progres indicator display on configuration step for all providers.

--- a/Source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/LDAPConfiguration.cshtml
+++ b/Source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/LDAPConfiguration.cshtml
@@ -1,4 +1,6 @@
-﻿<div class="card" id="ldapConfiguration">
+﻿<link href="~/Content/buttermilk.9_2.min.css" rel="stylesheet"/>
+
+<div class="card" id="ldapConfiguration">
 	<label class="label">Source Connection</label>
 	<div class="field-row">
 		<div class="field-label required">
