--- a/Source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/RelativityProviderConfiguration.cshtml
+++ b/Source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/RelativityProviderConfiguration.cshtml
@@ -3,7 +3,8 @@
 	ViewBag.Title = "Settings";
 }
 <link href="~/Content/themes/default/style.min.css" rel="stylesheet" />
-<link href="~/Content/jstree-fluid.css" rel="stylesheet" />
+<link href="~/Content/jstree-fluid.css" rel="stylesheet"/>
+<link href="~/Content/buttermilk.9_2.min.css" rel="stylesheet" />
 <div id="_main">
 	<div id="relativityProviderConfiguration" style="min-width: 900px;">
 		<div class="card">
