--- a/Source/kCura.IntegrationPoints.Web/Views/FtpProvider/GetDefaultFtpSettings.cshtml
+++ b/Source/kCura.IntegrationPoints.Web/Views/FtpProvider/GetDefaultFtpSettings.cshtml
@@ -6,51 +6,52 @@
 
 <link href="~/Content/site.css" rel="stylesheet" />
 <style>
-    .modal {
-        display: none; /* Hidden by default */
-        position: fixed; /* Stay in place */
-        z-index: 1; /* Sit on top */
-        left: 0;
-        top: 0;
-        width: 100%; /* Full width */
-        height: 100%; /* Full height */
-        overflow: auto; /* Enable scroll if needed */
-    }
+	.modal {
+		display: none; /* Hidden by default */
+		position: fixed; /* Stay in place */
+		z-index: 1; /* Sit on top */
+		left: 0;
+		top: 0;
+		width: 100%; /* Full width */
+		height: 100%; /* Full height */
+		overflow: auto; /* Enable scroll if needed */
+	}
 
-    /* Modal Content/Box */
-    .modal-content {
-        background-color: #596066;
-        padding-left: 5px;
-        border: 1px solid #888;
-        width: 650px;
-    padding-right: 5px;
-        color: white;
-    }
+	/* Modal Content/Box */
+	.modal-content {
+		background-color: #596066;
+		padding-left: 5px;
+		border: 1px solid #888;
+		width: 650px;
+		padding-right: 5px;
+		color: white;
+	}
 
-        .modal-content p {
-            display: inline;
-        }
-    /* The Close Button */
-    .close {
-        color: #aaa;
-        background-repeat: no-repeat;
-        top: 2px;
-        left: -1px;
-        position: relative;
-        cursor: pointer;
-        height: 16px;
-        width: 16px;
-        z-index: 9999;
-        float: right;
-    }
+	.modal-content p {
+		display: inline;
+	}
+	/* The Close Button */
+	.close {
+		color: #aaa;
+		background-repeat: no-repeat;
+		top: 2px;
+		left: -1px;
+		position: relative;
+		cursor: pointer;
+		height: 16px;
+		width: 16px;
+		z-index: 9999;
+		float: right;
+	}
 
-        .close:hover,
-        .close:focus {
-            color: black;
-            text-decoration: none;
-            cursor: pointer;
-        }
+	.close:hover,
+	.close:focus {
+		color: black;
+		text-decoration: none;
+		cursor: pointer;
+	}
 </style>
+<link href="~/Content/buttermilk.9_2.min.css" rel="stylesheet" />
 <div class="card">
 
     <label class="section label">Connection Information<img class="" id="contextualHelp" src="~/Content/images/help_icon.png" style="padding-left:5px;">  </label>
