Added missing reference do Dragon.dialogs

--- a/source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/ExportProviderSettings.cshtml
+++ b/source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/ExportProviderSettings.cshtml
@@ -1,4 +1,5 @@
-﻿<link type="text/css" rel="stylesheet" href="~/Content/ui-dialog.css" />
+﻿<script src="~/Scripts/dragon/dragon-dialogs.js"></script>
+<link type="text/css" rel="stylesheet" href="~/Content/ui-dialog.css" />
 
 <script id="exportProviderSettingsStep" type="text/html">
 
