Fix spelling error

--- a/Source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/_IntegrationMapFields.cshtml
+++ b/Source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/_IntegrationMapFields.cshtml
@@ -151,7 +151,7 @@
 				</div>
 			</div>
 			<div class="field-row" data-bind="visible: isDocument() == 'true' && UseFolderPathInformation() == 'true'">
-				<div class="field-label required ">Move Exisitng Documents:</div>
+				<div class="field-label required ">Move Existing Documents:</div>
 				<div class="field-value">
 					<ul>
 						<li>
