REL-124972 Helper tool tip is missing - step 3 relativity provider

--- a/Source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/_IntegrationMapFields.cshtml
+++ b/Source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/_IntegrationMapFields.cshtml
@@ -51,6 +51,7 @@
 	</div>
 	<div class="card">
 		<span class="label title">Settings</span>
+		<img data-bind="visible: IsRelativityProvider(), click: openRelativityProviderSettingsTooltip" class="tooltip-img" id="contextualSettingsHelp" style="padding-left:5px;" />
 		<div class="identifier">
 			<div class="field-row">
 				<div class="field-label required">Overwrite:</div>
